kubernetes_petclinic/ingress_petclinic/petclinic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: spring-petclinic
  name: petclinic-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/load-balancer-name: petclinic-alb
    alb.ingress.kubernetes.io/target-type: ip
   
spec:
  rules:
    - http:
        paths:
        - path: /api-gateway
          pathType: Prefix
          backend:
            service:
              name: api-gateway
              port:
                number: 443
    - http:
        paths:
        - path: /customers
          pathType: Prefix
          backend:
            service:
              name: customers-service
              port:
                number: 443
    - http:
        paths:
        - path: /vets
          pathType: Prefix
          backend:
            service:
              name: vets-service
              port:
                number: 443
    - http:
        paths:
        - path: /visits
          pathType: Prefix
          backend:
            service:
              name: visits-service
              port:
                number: 443
